egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pokemon-api
spec:
  hosts:
  - pokeapi.co
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - pokeapi.co
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-pokemon
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: pokemon-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-pokemon-through-egress-gateway
spec:
  hosts:
  - pokeapi.co
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: pokemon-api
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: pokeapi.co
        port:
          number: 80
      weight: 100
