ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-vs
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway-gateway
  http:
  - match:
    - uri:
        prefix: /pokemon
    route:
    - destination:
        host: api-gateway
        port:
          number: 80
